--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "@types/node": "18.0.0",
+    
     "@types/react": "^18.0.26",
-    "@types/react-dom": "18.0.5",
-    "@types/styled-components": "^5.1.25",
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
-    "typescript": "4.7.4"
+    
+    "@types/styled-components": "^5.1.25"
+    
+    
+    
   }
 }
