--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "18.11.17",
     "@types/react-dom": "18.0.10",
     "email-validator": "^2.0.4",
+    "emoji-picker-react": "^4.5.16",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
     "firebase": "^9.15.0",
@@ -25,7 +26,8 @@
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "styled-components": "^5.3.6",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "yarn": "^1.22.21"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
